--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -19,6 +19,30 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <EditText
+            android:id="@+id/editTextName"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:hint="Name"
+            android:textColorHint="@color/black"
+            android:layout_marginBottom="10dp"
+            android:gravity="center"
+            android:background="@drawable/rounder_edittext"
+            android:fontFamily="sans-serif"
+            android:inputType="textEmailAddress" />
+        <EditText
+            android:id="@+id/editTextSurname"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:hint="Surname"
+            android:textColorHint="@color/black"
+            android:layout_marginBottom="10dp"
+            android:gravity="center"
+            android:background="@drawable/rounder_edittext"
+            android:fontFamily="sans-serif"
+
+            android:inputType="textEmailAddress" />
+
+        <EditText
             android:id="@+id/editTextEmail"
             android:layout_width="match_parent"
             android:layout_height="40dp"
@@ -51,6 +75,17 @@
             android:fontFamily="sans-serif"
             android:background="@drawable/rounder_edittext"
             android:inputType="textPassword" />
+        <EditText
+            android:id="@+id/editTextImageUrl"
+            android:layout_width="match_parent"
+            android:layout_height="40dp"
+            android:layout_marginTop="10dp"
+            android:hint="Your Image URL"
+            android:gravity="center"
+            android:textColorHint="@color/black"
+            android:fontFamily="sans-serif"
+            android:background="@drawable/rounder_edittext"
+            />
         <EditText
             android:id="@+id/editTextPhoneNumber"
             android:layout_width="match_parent"
